container/kustomization/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hpx-docs-nginx
spec:
  selector:
    app: hpc-docs-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
